--- a/app/src/main/res/layout/main_top.xml
+++ b/app/src/main/res/layout/main_top.xml
@@ -16,16 +16,18 @@
             android:layout_marginStart="@dimen/dp_30"
             android:src="@drawable/ic_menu"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/khuA"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_41"
-            android:background="@drawable/bg_area"
+            android:background="@drawable/bg_area_blue"
             android:layout_marginTop="@dimen/dp_15"
             android:text="A 區"
             android:textSize="@dimen/sp_16"
             android:backgroundTint="@null"
-            android:textColor="@color/color_25427A"
+            android:textColor="@color/white"
             android:layout_marginLeft="@dimen/dp_71"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/khuB"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_41"
             android:background="@drawable/bg_area_blue"
@@ -36,6 +38,7 @@
             android:textColor="@color/white"
             android:layout_marginLeft="@dimen/dp_21"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/khuC"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_41"
             android:background="@drawable/bg_area_blue"
